--- a/conf/properties.cfg
+++ b/conf/properties.cfg
@@ -1,8 +1,8 @@
 [Driver]
 # Valid driver types: firefox, chrome, iexplore, edge, safari, opera, phantomjs, ios, android
-type: firefox
+type: chrome
 # Configure local driver paths
-chrome_driver_path:
+chrome_driver_path: D:\Code\Webdriver\chromedriver.exe
 explorer_driver_path:
 edge_driver_path:
 opera_driver_path:
@@ -49,4 +49,5 @@ comments:
 build:
 
 [Common]
-url:  https://esbo-vdcm-sec01.vdc-bo-mgt.hi.inet/app/#/
+url: https://gigas.com/panel/login
+
